--- a/dp-price-scraper/package.json
+++ b/dp-price-scraper/package.json
@@ -2,7 +2,7 @@
   "name": "dp-price-scraper",
   "productName": "dp-price-scraper",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Web-scrapping Price Analysis Tool",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
