--- a/DP-Scraper_React_Electron/package.json
+++ b/DP-Scraper_React_Electron/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "chromedriver": "^113.0.0",
     "electron-is-dev": "^2.0.0",
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.22",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.10.0",
     "react-router-native": "^6.10.0",
     "react-scripts": "5.0.1",
+    "selenium-webdriver": "^4.9.1",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
