--- a/DP-Scraper_React_Electron/package.json
+++ b/DP-Scraper_React_Electron/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-router-dom": "^6.10.0",
     "react-router-native": "^6.10.0",
     "react-scripts": "5.0.1",
