--- a/DP-Scraper_React_Electron/package.json
+++ b/DP-Scraper_React_Electron/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "scraper",
+  "name": "pricescraper",
+  "author" : "Timothy Huneck",
+  "description" : "Application to scrape, display, and print product prices",
+  "productName": "pricescraper",
   "version": "0.1.0",
   "private": true,
   "main": "./public/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@electron-forge/maker-dmg": "^6.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +16,10 @@
     "cheerio": "^1.0.0-rc.12",
     "chromedriver": "^113.0.0",
     "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -26,12 +33,17 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-forge": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "electron-builder -c.extraMetadata.main=build/electron.js",
-    "preelectron-pack": "react-scripts build"
+    "preelectron-pack": "react-scripts build",
+    "publish": "electron-builder build --mac --win --publish always",
+    "electron": "electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "eslintConfig": {
     "extends": [
@@ -52,10 +64,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-react": "^7.22.3",
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
+    "babel-loader": "^9.1.2",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "electron": "^24.1.3",
-    "electron-builder": "^23.6.0",
     "wait-on": "^7.0.1"
   }
 }
